--- a/src/components/query/query.html
+++ b/src/components/query/query.html
@@ -20,13 +20,13 @@
         <div class="form-element">
             <monaco-editor class="query-editor monaco-container" language="sql"></monaco-editor>
         </div>
-        <div class="m-top_small">
+        <div class="query-footer">
             <button class="button-brand query-execute-btn">Execute Query</button>
             <label class="query-tooling-label">
                 <input type="checkbox" class="query-tooling-checkbox">
                 Tooling API
             </label>
-            <span class="query-status status-badge"></span>
+            <span class="status-badge query-status" style="margin-left: 0;"></span>
         </div>
     </div>
 </div>
