--- a/src/components/apex/apex.html
+++ b/src/components/apex/apex.html
@@ -2,19 +2,16 @@
     <div class="card-header">
         <div class="card-header-icon" style="background-color: #6a67ce;">A</div>
         <h2>Anonymous Apex</h2>
-        <div class="apex-header-dropdown">
-            <button class="apex-dropdown-trigger" title="History & Favorites">&#9776;</button>
-            <div class="apex-dropdown-menu">
-                <div class="apex-dropdown-tabs">
-                    <button class="apex-dropdown-tab active" data-tab="history">History</button>
-                    <button class="apex-dropdown-tab" data-tab="favorites">Favorites</button>
-                </div>
-                <div class="apex-dropdown-content">
-                    <div class="apex-script-list apex-history-list"></div>
-                    <div class="apex-script-list apex-favorites-list" style="display: none;"></div>
-                </div>
+        <button-icon class="apex-history-btn" icon="&#9776;" title="History & Favorites">
+            <div class="apex-dropdown-tabs">
+                <button class="apex-dropdown-tab active" data-tab="history">History</button>
+                <button class="apex-dropdown-tab" data-tab="favorites">Favorites</button>
             </div>
-        </div>
+            <div class="apex-dropdown-content">
+                <div class="apex-script-list apex-history-list"></div>
+                <div class="apex-script-list apex-favorites-list" style="display: none;"></div>
+            </div>
+        </button-icon>
     </div>
     <div class="card-body">
         <div class="form-element">
@@ -32,7 +29,6 @@
         <h2>Debug Log</h2>
         <div class="apex-output-search">
             <input type="text" class="apex-search-input" placeholder="Filter...">
-            <button class="apex-search-clear" title="Clear filter">&times;</button>
         </div>
     </div>
     <div class="card-body">
