--- a/src/components/apex/apex.css
+++ b/src/components/apex/apex.css
@@ -42,7 +42,7 @@
     margin-left: auto;
 }
 
-.apex-history-btn .btn-icon-menu {
+.apex-history-modal .modal-content {
     width: 300px;
     max-height: 400px;
     padding: 0;
