--- a/src/components/query/query.html
+++ b/src/components/query/query.html
@@ -2,7 +2,8 @@
     <div class="card-header">
         <div class="card-header-icon" style="background-color: #0070d2;">S</div>
         <h2>SOQL Query</h2>
-        <button-icon class="query-history-btn" icon="&#9776;" title="History & Favorites">
+        <button-icon class="query-history-btn" icon="&#9776;" title="History & Favorites"></button-icon>
+        <modal-popup class="query-history-modal">
             <div class="query-dropdown-tabs">
                 <button class="query-dropdown-tab active" data-tab="history">History</button>
                 <button class="query-dropdown-tab" data-tab="favorites">Favorites</button>
@@ -11,7 +12,7 @@
                 <div class="query-script-list query-history-list"></div>
                 <div class="query-script-list query-favorites-list" style="display: none;"></div>
             </div>
-        </button-icon>
+        </modal-popup>
         <button-icon class="query-settings-btn" icon="&#9881;" title="Settings">
             <label class="btn-icon-checkbox">
                 <input type="checkbox" class="query-tooling-checkbox">
