Clear changes button

--- a/src/components/query/query.html
+++ b/src/components/query/query.html
@@ -44,6 +44,7 @@
         <button-icon class="query-results-btn" icon="&#8942;" title="Options">
             <button class="btn-icon-option query-export-btn" disabled>Export CSV</button>
             <button class="btn-icon-option query-save-btn" disabled>Save Changes</button>
+            <button class="btn-icon-option query-clear-btn" disabled>Clear Changes</button>
         </button-icon>
     </div>
     <div class="card-body query-card-body">
