--- a/src/components/settings/settings.html
+++ b/src/components/settings/settings.html
@@ -104,14 +104,7 @@
                     <li>In Salesforce Setup, search for "CORS"</li>
                     <li>Click "CORS" under Security</li>
                     <li>Click "New" to add an allowed origin pattern</li>
-                    <li>Enter: <code>chrome-extension://[your-extension-id]</code></li>
-                    <li>To find your extension ID:
-                        <ul>
-                            <li>Open <code>chrome://extensions/</code></li>
-                            <li>Enable "Developer mode" (top-right toggle)</li>
-                            <li>Find "sftools" and copy the ID below the extension name</li>
-                        </ul>
-                    </li>
+                    <li>Enter: <code>chrome-extension://mckblnkfhlgocgmehmnihmagmhbnjioj</code></li>
                     <li>Save the CORS entry</li>
                 </ol>
                 <p><strong>Note:</strong> When the local proxy is enabled, CORS restrictions are bypassed automatically and this configuration is not required.</p>
