--- a/src/components/schema/schema.html
+++ b/src/components/schema/schema.html
@@ -31,6 +31,7 @@
                             </button>
                         </div>
                         <div class="selected-object-name" id="selectedObjectName"></div>
+                        <input type="text" id="fieldFilter" class="input filter-input" placeholder="Filter fields...">
                     </div>
                     <div class="field-header">
                         <div>Field Label</div>
@@ -67,7 +68,7 @@
         </div>
         <div class="modal-footer">
             <div class="modal-status" id="modalStatus"></div>
-            <button id="modalCancelBtn" class="button">Cancel</button>
+            <button id="modalCancelBtn" class="button-neutral">Cancel</button>
             <button id="modalSaveBtn" class="button-brand">Save</button>
         </div>
     </div>
