--- a/src/components/schema/schema.html
+++ b/src/components/schema/schema.html
@@ -14,7 +14,10 @@
                 <div class="objects-panel">
                     <div class="objects-header">
                         <input type="text" id="objectFilter" class="input filter-input" placeholder="Filter objects...">
-                        <div id="objectCount" class="object-count"></div>
+                        <div class="objects-header-row">
+                            <div id="objectCount" class="object-count"></div>
+                            <button-icon id="refreshObjectsBtn" icon="&#8635;" title="Refresh objects"></button-icon>
+                        </div>
                     </div>
                     <div id="objectsList" class="objects-list">
                         <div class="loading-container">Loading objects...</div>
@@ -24,11 +27,14 @@
                     <div class="fields-header">
                         <div class="fields-header-top">
                             <h3 id="selectedObjectLabel"></h3>
-                            <button id="closeFieldsBtn" class="button-icon-only" aria-label="Close">
-                                <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor">
-                                    <path d="M4.646 4.646a.5.5 0 01.708 0L8 7.293l2.646-2.647a.5.5 0 01.708.708L8.707 8l2.647 2.646a.5.5 0 01-.708.708L8 8.707l-2.646 2.647a.5.5 0 01-.708-.708L7.293 8 4.646 5.354a.5.5 0 010-.708z"/>
-                                </svg>
-                            </button>
+                            <div class="fields-header-actions">
+                                <button-icon id="refreshFieldsBtn" icon="&#8635;" title="Refresh fields"></button-icon>
+                                <button class="close-btn" id="closeFieldsBtn" title="Close">
+                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor">
+                                        <path d="M4.646 4.646a.5.5 0 01.708 0L8 7.293l2.646-2.647a.5.5 0 01.708.708L8.707 8l2.647 2.646a.5.5 0 01-.708.708L8 8.707l-2.646 2.647a.5.5 0 01-.708-.708L7.293 8 4.646 5.354a.5.5 0 010-.708z"/>
+                                    </svg>
+                                </button>
+                            </div>
                         </div>
                         <div class="selected-object-name" id="selectedObjectName"></div>
                         <input type="text" id="fieldFilter" class="input filter-input" placeholder="Filter fields...">
@@ -55,7 +61,7 @@
                 <h3>Edit Formula</h3>
                 <div class="modal-field-info" id="modalFieldInfo"></div>
             </div>
-            <button id="modalCloseBtn" class="button-icon-only" aria-label="Close">
+            <button class="close-btn" id="modalCloseBtn" title="Close">
                 <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor">
                     <path d="M4.646 4.646a.5.5 0 01.708 0L8 7.293l2.646-2.647a.5.5 0 01.708.708L8.707 8l2.647 2.646a.5.5 0 01-.708.708L8 8.707l-2.646 2.647a.5.5 0 01-.708-.708L7.293 8 4.646 5.354a.5.5 0 010-.708z"/>
                 </svg>
