--- a/src/components/query/query.html
+++ b/src/components/query/query.html
@@ -13,6 +13,16 @@
                 <div class="query-script-list query-favorites-list" style="display: none;"></div>
             </div>
         </modal-popup>
+        <modal-popup class="query-favorite-modal">
+            <div class="query-favorite-dialog">
+                <h3>Add to Favorites</h3>
+                <input type="text" class="query-favorite-input" placeholder="Enter a label for this query">
+                <div class="query-favorite-buttons">
+                    <button class="button-neutral query-favorite-cancel">Cancel</button>
+                    <button class="button-brand query-favorite-save">Save</button>
+                </div>
+            </div>
+        </modal-popup>
         <button-icon class="query-settings-btn" icon="&#9881;" title="Settings">
             <label class="btn-icon-checkbox">
                 <input type="checkbox" class="query-tooling-checkbox">
