--- a/src/components/button-icon/button-icon.css
+++ b/src/components/button-icon/button-icon.css
@@ -3,6 +3,9 @@
 button-icon {
     position: relative;
     display: inline-block;
+    width: 32px;
+    height: 32px;
+    flex-shrink: 0;
 }
 
 button-icon .btn-icon-trigger {
