feat(02-02): add SVG icon styling to button-icon CSS
- SVG icons inherit color via fill: currentColor
- Vertical alignment for proper icon positioning

--- a/src/components/button-icon/button-icon.css
+++ b/src/components/button-icon/button-icon.css
@@ -33,6 +33,11 @@ button-icon .btn-icon-trigger:disabled {
     cursor: not-allowed;
 }
 
+button-icon .btn-icon-trigger svg {
+    vertical-align: middle;
+    fill: currentColor;
+}
+
 button-icon .btn-icon-menu {
     display: none;
     position: absolute;
