--- a/src/components/query/query.html
+++ b/src/components/query/query.html
@@ -2,7 +2,7 @@
     <div class="card-header">
         <div class="card-header-icon" style="background-color: #0070d2;">S</div>
         <h2>SOQL Query</h2>
-        <button-icon class="query-history-btn" icon="&#128337;" title="History & Favorites"></button-icon>
+        <button-icon class="query-history-btn" data-icon="clock" title="History & Favorites"></button-icon>
         <modal-popup class="query-history-modal">
             <div class="query-dropdown-tabs">
                 <button class="query-dropdown-tab active" data-tab="history">History</button>
@@ -23,7 +23,7 @@
                 </div>
             </div>
         </modal-popup>
-        <button-icon class="query-settings-btn" icon="&#9881;" title="Settings">
+        <button-icon class="query-settings-btn" data-icon="settings" title="Settings">
             <label class="btn-icon-checkbox">
                 <input type="checkbox" class="query-tooling-checkbox">
                 Tooling API
@@ -51,7 +51,7 @@
         <div class="query-results-search">
             <input type="text" class="query-search-input" placeholder="Filter...">
         </div>
-        <button-icon class="query-results-btn" icon="&#8942;" title="Options">
+        <button-icon class="query-results-btn" data-icon="verticalDots" title="Options">
             <button class="btn-icon-option query-export-btn" disabled>Export CSV</button>
             <button class="btn-icon-option query-save-btn" disabled>Save Changes</button>
             <button class="btn-icon-option query-clear-btn" disabled>Clear Changes</button>
