feat(02-03): replace HTML entity icons with SLDS in schema.html
- Refresh objects button: icon="&#8635;" → data-icon="refresh"
- Refresh fields button: icon="&#8635;" → data-icon="refresh"

--- a/src/components/schema/schema.html
+++ b/src/components/schema/schema.html
@@ -16,7 +16,7 @@
                         <input type="text" id="objectFilter" class="input filter-input" placeholder="Filter objects...">
                         <div class="objects-header-row">
                             <div id="objectCount" class="object-count"></div>
-                            <button-icon id="refreshObjectsBtn" icon="&#8635;" title="Refresh objects"></button-icon>
+                            <button-icon id="refreshObjectsBtn" data-icon="refresh" title="Refresh objects"></button-icon>
                         </div>
                     </div>
                     <div id="objectsList" class="objects-list">
@@ -28,7 +28,7 @@
                         <div class="fields-header-top">
                             <h3 id="selectedObjectLabel"></h3>
                             <div class="fields-header-actions">
-                                <button-icon id="refreshFieldsBtn" icon="&#8635;" title="Refresh fields"></button-icon>
+                                <button-icon id="refreshFieldsBtn" data-icon="refresh" title="Refresh fields"></button-icon>
                                 <button class="close-btn" id="closeFieldsBtn" title="Close">
                                     {{icon:close}}
                                 </button>
